<resources>
    <string name="app_name">Pousadas</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Login</string>

    <!-- Botões Menu Cliente -->
    <string name="room_MenuClient">Reservas</string>
    <string name="food_MenuClient">Refeições</string>
    <string name="service_MenuClient">Serviços Adicionais</string>
    <string name="shop_MenuClient">Carrinho de Compras</string>
    <string name="shop_delete_MenuClient">Remover</string>
    <string name="settings_MenuClient">Servidor</string>
    <string name="userInfo_MenuClient">Utilizador</string>

    <string name="menu">Menu</string>
    <string name="tasks_MenuFunc">Tarefas</string>
    <string name="reservation_MenuAdmin">Reservas</string>
    <string name="users_MenuAdmin">Utilizadores</string>
    <string name="finance_MenuAdmin">Finanças</string>

    <!-- TextViews na página da reserva -->
    <string name="txtClientReservation">Reserva:</string>
    <string name="txtClientRoom">Quarto:</string>
    <string name="txtClientInit">Data Início:</string>
    <string name="txtClientEnd">Data Fim:</string>
    <string name="txtClientDay">Valor Diário:</string>
    <string name="txtClientTotal">Valor Total:</string>
    <string name="txtClientStatus">Status:</string>
    <string name="txtWelcome">Bem vindo/a</string>

    <!-- TextFields na página marcar refeições -->
    <string name="txtFood">Refeição</string>
    <string name="txtDate">Data</string>
    <string name="txtTime">Horário</string>

    <!-- TextFields na página de reservas -->
    <string name="txtInitDate">Data Inicial</string>
    <string name="txtEndDate">Data Final</string>
    <string name="txtDescription">Descrição</string>

    <!-- TextFields página de IP -->
    <string name="hintIPConfig">IP Address</string>
    <string name="IPConfig">Configuração IP</string>
    <string name="btnStart">Start</string>
    <string name="txtClientName">Cliente:</string>
    <string name="txtInvoiceDate">Data Fatura:</string>
    <string name="txtPrice">Preço</string>
    <string name="txtQty">Qty</string>
</resources>