<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_client_room"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:fabSize="mini"
        android:visibility="invisible"
        android:contentDescription="@string/room_MenuClient"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_admin_reservation"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:fabSize="mini"
        android:visibility="invisible"
        android:contentDescription="@string/reservation_MenuAdmin"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_admin_users"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:fabSize="mini"
        android:visibility="invisible"
        android:contentDescription="@string/users_MenuAdmin"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_admin_finance"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:fabSize="mini"
        android:visibility="invisible"
        android:contentDescription="@string/finance_MenuAdmin"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_settings"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:fabSize="mini"
        android:visibility="invisible"
        android:contentDescription="@string/settings_MenuClient"/>

</FrameLayout>