<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="20dp"
        android:id="@+id/list_item"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description"
                style="@style/ListItem"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/txtDescription"/>

            <TextView
                android:id="@+id/qty"
                style="@style/ListItem"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/txtQty"/>

            <TextView
                android:id="@+id/price"
                style="@style/ListItem"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/txtPrice"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>