<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

  <!-- Input do Username -->
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:src="@drawable/logoipl" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:hint="@string/hintUsername"
      app:boxStrokeWidth="3dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputEditText>
  </com.google.android.material.textfield.TextInputLayout>

  <!-- Input da Password -->
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:hint="@string/hintPassword"
      app:endIconMode="password_toggle"
      app:boxStrokeWidth="3dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword">

    </com.google.android.material.textfield.TextInputEditText>
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btnLogin"
      style="@style/Widget.Material3.Button.Icon"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="20dp"
      android:layout_marginHorizontal="120dp"
      android:paddingVertical="10dp"
      android:textSize="30sp"
      android:onClick="onClickLogin"
      android:text="@string/btnLogin">

  </Button>

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.7" />
</LinearLayout>