<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.FoodClientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_client_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFoodDate"
                android:hint="@string/txtDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFoodTime"
                android:hint="@string/txtTime"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            style="@style/CardView">

            <ListView
                android:id="@+id/listFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null">
            </ListView>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:contentDescription="@string/shop_MenuClient"
        android:src="@android:drawable/ic_input_add" />

</LinearLayout>