<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReservationDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                style="@style/CardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="50dp"
                        android:text="@string/reservation_MenuAdmin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientReservation" />

                        <EditText
                            android:id="@+id/eClientReservation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            android:inputType="number"
                            style="@style/ReservationText"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientRoom" />

                        <EditText
                            android:id="@+id/eClientRoom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            style="@style/ReservationText"
                            android:inputType="text"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientInit" />

                        <EditText
                            android:id="@+id/eClientInit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            style="@style/ReservationText"
                            android:inputType="text"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientEnd" />

                        <EditText
                            android:id="@+id/eClientEnd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            style="@style/ReservationText"
                            android:inputType="text"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientTotal"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/eClientTotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            style="@style/ReservationText"
                            android:inputType="numberDecimal"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:gravity="end"
                            android:text="@string/txtClientStatus"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/eClientStatus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".7"
                            android:ems="10"
                            style="@style/ReservationText"
                            android:inputType="text"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>